--- a/translucentparent/build.gradle
+++ b/translucentparent/build.gradle
@@ -31,9 +31,8 @@ artifacts {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+    testCompileOnly 'junit:junit:4.12'
+    androidTestCompileOnly 'androidx.test.ext:junit:1.1.1'
+    androidTestCompileOnly 'androidx.test.espresso:espresso-core:3.2.0'
 }
