--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Status00Activity"></activity>
+        <activity android:name=".Status0Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +24,7 @@
         <activity android:name=".Status5Activity" />
         <activity android:name=".Status6Activity" />
         <activity android:name=".Navigation1Activity" />
-        <activity android:name=".Navigation2Activity"></activity>
+        <activity android:name=".Navigation2Activity" />
     </application>
 
 </manifest>
