--- a/translucentparent/build.gradle
+++ b/translucentparent/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     testCompileOnly 'junit:junit:4.12'
     androidTestCompileOnly 'androidx.test.ext:junit:1.1.1'
     androidTestCompileOnly 'androidx.test.espresso:espresso-core:3.2.0'
+    compileOnly 'androidx.appcompat:appcompat:+'
 }
