简化使用方式，

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Status00Activity"></activity>
+        <activity android:name=".HideNavigationBarActivity"></activity>
+        <activity android:name=".HideStatusBarActivity" />
+        <activity android:name=".FullScreenActivity" />
+        <activity android:name=".Navigation0Activity" />
+        <activity android:name=".Status00Activity" />
         <activity android:name=".Status0Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
