--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HideNavigationBarActivity"></activity>
+        <activity android:name=".StatusNavigationSwitchActivity"></activity>
+        <activity android:name=".HideNavigationBarActivity" />
         <activity android:name=".HideStatusBarActivity" />
         <activity android:name=".FullScreenActivity" />
         <activity android:name=".Navigation0Activity" />
