--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion var.compileSdkVersion
-
+    compileSdkVersion 35
+    namespace 'com.cy.statusnavigationtrans'
     defaultConfig {
-        minSdkVersion var.minSdkVersion
-        targetSdkVersion var.targetSdkVersion
+        minSdkVersion 21
+        targetSdkVersion 35
         applicationId "com.cy.statusnavigationtrans"
         versionCode 1
         versionName "1.0"
@@ -19,21 +20,25 @@ android {
     }
 //指定jdk版本
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
     }
 }
-configurations.all {
-    resolutionStrategy {
-        resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'androidx.appcompat') {
-                details.useVersion "1.1.0"
-            }
-        }
-    }
-}
+//configurations.all {
+//    resolutionStrategy {
+//        resolutionStrategy.eachDependency { details ->
+//            if (details.requested.group == 'androidx.appcompat') {
+//                details.useVersion "1.4.0"
+//            }
+//        }
+//    }
+//}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.activity:activity:1.8.0'
     api project(':translucentparent')
 }
