--- a/translucentparent/build.gradle
+++ b/translucentparent/build.gradle
@@ -1,31 +1,41 @@
 apply plugin: 'com.android.library'
 apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 35
     namespace 'com.cy.translucentparent'
+
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 35
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    //指定jdk版本
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
         jvmTarget = "17"
+    }
+
+    // ✅ Gradle 自动生成 sources/javadoc Jar
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
     }
 }
 
@@ -35,42 +45,12 @@ dependencies {
     compileOnly 'androidx.activity:activity:1.8.0'
 }
 
-//---------------------------------------------下面的必加,加上下面的作用是在上传后会带上注释,不然会发现没有注释
-apply plugin: 'maven-publish'
-
 afterEvaluate {
-    // 生成 Javadoc（避免 Android 类未找到）
-    def androidJavadoc = tasks.register("androidJavadoc", Javadoc) {
-        source = android.sourceSets.main.java.srcDirs
-        classpath += files(android.bootClasspath)
-        failOnError = false
-    }
-
-    // sourcesJar
-    def sourcesJar = tasks.register("sourcesJar", Jar) {
-        archiveClassifier.set("sources")
-        from android.sourceSets.main.java.srcDirs
-    }
-
-    // javadocJar
-    def javadocJar = tasks.register("javadocJar", Jar) {
-        dependsOn androidJavadoc
-        archiveClassifier.set("javadoc")
-        from androidJavadoc.get().destinationDir
-    }
-
     publishing {
         publications {
-            mavenJava(MavenPublication) {
+            release(MavenPublication) {
                 from components.release
-
-                // 🔥 显式声明依赖，解决 Gradle 8 错误
-                artifact(sourcesJar.get()) {
-                    builtBy(sourcesJar.get())
-                }
-                artifact(javadocJar.get()) {
-                    builtBy(javadocJar.get())
-                }
+                groupId = 'com.github.AnJiaoDe'      // TODO: 改成你的 GitHub 用户名
             }
         }
     }
