update:适配垃圾安卓的垃圾15

--- a/translucentparent/build.gradle
+++ b/translucentparent/build.gradle
@@ -30,13 +30,13 @@ android {
         jvmTarget = "17"
     }
 
-    // ✅ Gradle 自动生成 sources/javadoc Jar
-//    publishing {
-//        singleVariant("release") {
-//            withSourcesJar()
-//            withJavadocJar()
-//        }
-//    }
+    // ✅ Gradle 自动生成 sources/javadoc Jar，保留注释
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
@@ -47,10 +47,6 @@ dependencies {
 
 afterEvaluate {
     publishing {
-        singleVariant("release") {
-            withSourcesJar()
-            withJavadocJar()
-        }
         publications {
             release(MavenPublication) {
                 from components.release
