update:适配垃圾安卓的垃圾15

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 35
+    compileSdkVersion 34
     namespace 'com.cy.statusnavigationtrans'
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 35
+        targetSdkVersion 30
         applicationId "com.cy.statusnavigationtrans"
         versionCode 1
         versionName "1.0"
@@ -20,11 +20,11 @@ android {
     }
 //指定jdk版本
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = "1.8"
     }
 }
 dependencies {
